--- a/index.html
+++ b/index.html
@@ -1,172 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Times Tables Practice</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #f0f8ff;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      color: #333;
-    }
-    .question {
-      font-size: 24px;
-      margin: 20px 0;
-    }
-    input[type="number"] {
-      font-size: 18px;
-      padding: 5px;
-      width: 100px;
-      text-align: center;
-    }
-    button {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin: 10px;
-    }
-    .feedback {
-      margin-top: 20px;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    .feedback.correct {
-      color: green;
-    }
-    .feedback.incorrect {
-      color: red;
-    }
-    .progress {
-      margin-top: 20px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Times Tables Practice</h1>
-  <div class="question"></div>
-  <input type="number" id="answer" placeholder="Your answer" />
-  <button id="submit">Submit</button>
-  <button id="reset">Reset Progress</button>
-  <div class="feedback"></div>
-  <div class="progress"></div>
 
-  <script>
-    const A = 2; // Adjust score bias
-    const B = 2; // Adjust score bias
+Here's the corrected section of the code with the missing line added back:
 
-    const questionDiv = document.querySelector('.question');
-    const answerInput = document.querySelector('#answer');
-    const submitButton = document.querySelector('#submit');
-    const resetButton = document.querySelector('#reset');
-    const feedbackDiv = document.querySelector('.feedback');
-    const progressDiv = document.querySelector('.progress');
+Corrected Code Snippet:
+javascript
+Copy code
+function getNextQuestion() {
+  const questions = Object.keys(progress);
+  const groupedQuestions = {
+    low: [],
+    mid: [],
+    high: [],
+    mastered: []
+  };
 
-    let progress = JSON.parse(localStorage.getItem('progress')) || {};
-    let currentQuestion = {};
+  for (const key of questions) {
+    const score = calculateScore(key);
+    if (score < 0.5) groupedQuestions.low.push(key);
+    else if (score < 0.75) groupedQuestions.mid.push(key);
+    else if (score < 0.9) groupedQuestions.high.push(key);
+    else groupedQuestions.mastered.push(key);
+  }
 
-    function getRandomInt(min, max) {
-      return Math.floor(Math.random() * (max - min + 1)) + min;
-    }
+  let questionKey;
+  if (groupedQuestions.low.length > 0) {
+    questionKey = groupedQuestions.low[getRandomInt(0, groupedQuestions.low.length - 1)];
+  } else if (groupedQuestions.mid.length > 0) {
+    questionKey = groupedQuestions.mid[getRandomInt(0, groupedQuestions.mid.length - 1)];
+  } else if (groupedQuestions.high.length > 0) {
+    questionKey = groupedQuestions.high[getRandomInt(0, groupedQuestions.high.length - 1)];
+  } else {
+    currentQuestion = {
+      a: getRandomInt(1, 12),
+      b: getRandomInt(1, 12),
+    };
+    questionDiv.textContent = `What is ${currentQuestion.a} × ${currentQuestion.b}?`; // Added back
+    return;
+  }
 
-    function calculateScore(questionKey) {
-      const stats = progress[questionKey] || { correct: 0, incorrect: 0 };
-      return (stats.correct + A) / (stats.correct + stats.incorrect + A + B);
-    }
-
-    function getNextQuestion() {
-      const questions = Object.keys(progress);
-      const groupedQuestions = {
-        low: [],
-        mid: [],
-        high: [],
-        mastered: []
-      };
-
-      for (const key of questions) {
-        const score = calculateScore(key);
-        if (score < 0.5) groupedQuestions.low.push(key);
-        else if (score < 0.75) groupedQuestions.mid.push(key);
-        else if (score < 0.9) groupedQuestions.high.push(key);
-        else groupedQuestions.mastered.push(key);
-      }
-
-      let questionKey;
-      if (groupedQuestions.low.length > 0) {
-        questionKey = groupedQuestions.low[getRandomInt(0, groupedQuestions.low.length - 1)];
-      } else if (groupedQuestions.mid.length > 0) {
-        questionKey = groupedQuestions.mid[getRandomInt(0, groupedQuestions.mid.length - 1)];
-      } else if (groupedQuestions.high.length > 0) {
-        questionKey = groupedQuestions.high[getRandomInt(0, groupedQuestions.high.length - 1)];
-      } else {
-        currentQuestion = {
-          a: getRandomInt(1, 12),
-          b: getRandomInt(1, 12),
-        };
-        return;
-      }
-
-      currentQuestion = JSON.parse(questionKey);
-    }
-
-    function checkAnswer() {
-      const userAnswer = parseInt(answerInput.value, 10);
-      const correctAnswer = currentQuestion.a * currentQuestion.b;
-
-      if (userAnswer === correctAnswer) {
-        feedbackDiv.textContent = `Correct! ${currentQuestion.a} × ${currentQuestion.b} = ${correctAnswer}`;
-        feedbackDiv.className = 'feedback correct';
-        updateProgress(true);
-      } else {
-        feedbackDiv.textContent = `Incorrect! ${currentQuestion.a} × ${currentQuestion.b} = ${correctAnswer}`;
-        feedbackDiv.className = 'feedback incorrect';
-        updateProgress(false);
-      }
-      answerInput.value = '';
-      updateProgressDisplay();
-      getNextQuestion();
-    }
-
-    function updateProgress(isCorrect) {
-      const questionKey = JSON.stringify(currentQuestion);
-      if (!progress[questionKey]) {
-        progress[questionKey] = { correct: 0, incorrect: 0 };
-      }
-      if (isCorrect) {
-        progress[questionKey].correct += 1;
-      } else {
-        progress[questionKey].incorrect += 1;
-      }
-      localStorage.setItem('progress', JSON.stringify(progress));
-    }
-
-    function updateProgressDisplay() {
-      const totalCorrect = Object.values(progress).reduce((sum, q) => sum + q.correct, 0);
-      const totalIncorrect = Object.values(progress).reduce((sum, q) => sum + q.incorrect, 0);
-      progressDiv.textContent = `Progress: ${totalCorrect} correct, ${totalIncorrect} incorrect`;
-    }
-
-    function resetProgress() {
-      if (confirm('Are you sure you want to reset all your progress?')) {
-        progress = {};
-        localStorage.removeItem('progress');
-        updateProgressDisplay();
-      }
-    }
-
-    submitButton.addEventListener('click', checkAnswer);
-    answerInput.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') checkAnswer();
-    });
-    resetButton.addEventListener('click', resetProgress);
-
-    // Initialize
-    getNextQuestion();
-    updateProgressDisplay();
-  </script>
-</body>
-</html>
+  currentQuestion = JSON.parse(questionKey);
+  questionDiv.textContent = `What is ${currentQuestion.a} × ${currentQuestion.b}?`; // Added back
+}
