made smaller for mobile

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(12, 40px);
+      grid-template-columns: repeat(12, 35px);
       grid-gap: 2px;
       justify-content: center;
       margin-top: 20px;
     }
     .cell {
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -64,7 +64,7 @@
   </style>
 </head>
 <body>
-  <h1>Times Tables Practice</h1>
+  <!-- <h1>Times Tables Practice</h1> -->
   <div class="question"></div>
   <input type="number" id="answer" placeholder="Your answer" />
   <button id="submit">Submit</button>
