--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(12, 35px);
+      grid-template-columns: repeat(12, 40px);
       grid-gap: 2px;
       justify-content: center;
       margin-top: 20px;
     }
     .cell {
-      width: 35px;
-      height: 35px;
+      width: 40px;
+      height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -61,6 +61,26 @@
       color: #000;
       border: 1px solid #ccc;
     }
+
+@media (max-width: 600px) {
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(12, 30px);
+      grid-gap: 2px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .cell {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 10px;
+      color: #000;
+      border: 1px solid #ccc;
+    }
+}
   </style>
 </head>
 <body>
